# nft-marketplace-anchor

./: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json
frontend/: .env.example  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: InfoList.tsx  NFTList.tsx
frontend/src/config/: index.ts
frontend/src/context/: index.tsx
frontend/src/hooks/: useListedNFTs.ts
marketplace-frontend/: .env.example  .env_example.txt  env_example.txt  netlify.toml
marketplace-frontend/src/app/: layout.tsx  page.tsx
marketplace-frontend/src/components/: Layout.tsx  NFTCard.tsx
marketplace-frontend/src/config/: index.ts
marketplace-frontend/src/context/: WalletProvider.tsx
marketplace-frontend/src/idl/: nft_marketplace.json
marketplace-frontend/src/styles/: globals.css
nft-frontend/: package-lock.json  package.json  tailwind.config.ts
nft-frontend/src/app/: layout.tsx  page.tsx
nft-frontend/src/components/: ActionButtonList.tsx  ConnectButton.tsx  InfoList.tsx  Layout.tsx  ListedNFTCard.tsx  NFTCard.tsx  Navbar.tsx
nft-frontend/src/config/: index.ts
nft-frontend/src/context/: WalletProvider.tsx
nft-frontend/src/hooks/: useFetchListings.ts  usePinata.ts
nft-frontend/src/idl/: nft_marketplace.json
programs/nft_marketplace/: Cargo.toml
rocket-mongo-example/: Cargo.toml
rocket-mongo-example/src/: main.rs  models.rs  routes.rs
rocket-mongodb-backend/: Cargo.toml  Rocket.toml.example
rocket-mongodb-backend/src/: db.rs  main.rs
tests/: nft_marketplace.ts
(+9 files in other folders)
